--- a/sass/base.scss/_base.scss
+++ b/sass/base.scss/_base.scss
@@ -24,9 +24,9 @@ img {
 }
 
 body {
-  // background-color: $primary-color;
-  color: $main-text-color;
-  // font-family: $main-font, sans-serif;
+  background-color: $primary-color;
+  color: $primary-heading-color;
+  font-family: $main-font, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
