--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+a, .nav-btn {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); }
+
 *,
 ::after,
 ::before {
@@ -110,7 +113,13 @@ summary {
   display: list-item; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #ffffff;
+  transition-duration: 300ms; }
+
+a:hover,
+a:focus {
+  color: #fe9e45; }
 
 ul,
 ol {
@@ -139,5 +148,91 @@ body {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em; }
+
+.container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px; }
+
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px; } }
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px; } }
+@media screen and (min-width: 1400px) {
+  .container {
+    max-width: 1200px; } }
+.hidden {
+  display: none; }
+
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px; }
+
+@media screen and (min-width: 1400px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px; } }
+.button {
+  min-width: 200px;
+  height: 50px;
+  cursor: pointer;
+  padding: 10px 32px;
+  border: none;
+  border-radius: 4px;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background-color: #fe9e45; }
+
+.navigation {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  align-items: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5); }
+
+.navigation-menu {
+  display: none;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.219; }
+
+@media screen and (min-width: 768px) {
+  .navigation-menu {
+    display: flex; } }
+.nav-menu_item:not(:last-child) {
+  margin-right: 43px; }
+
+.nav-btn {
+  display: none;
+  background-color: transparent;
+  border: 2px solid #fe9e45;
+  color: #fe9e45;
+  box-shadow: 0 0 10px #fe9e45;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 1.219;
+  transition-duration: 300ms; }
+
+.nav-btn:hover,
+.nav-btn:focus {
+  border: 2px solid #ffffff;
+  color: #ffffff;
+  box-shadow: 0 0 10px #ffffff; }
+
+@media screen and (min-width: 1400px) {
+  .nav-btn {
+    display: flex; } }
+body {
+  background-color: #2b2626; }
 
 /*# sourceMappingURL=main.css.map */
