--- a/src/sass/components/_1navigation.scss
+++ b/src/sass/components/_1navigation.scss
@@ -1,3 +1,9 @@
+header {
+  position: absolute;
+  background-color: transparent;
+  width: 100%;
+}
+
 .navigation {
   display: flex;
   justify-content: space-around;
